--- a/css/tetris.css
+++ b/css/tetris.css
@@ -142,7 +142,10 @@ body {
 }
 
 .description {
-  margin: 4px auto;
+  margin-top: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 4px;
   border: 1px solid #000000;
   width: 590px;
   background-color: #606080;
@@ -150,6 +153,125 @@ body {
   padding: 4px;
 }
 
-.description p {
-  padding: 4px;
+.description .row {
+  padding: 0;
+  margin: 0;
+  display: block;
+  width: 590px;
+  margin: 8px 0;
+}
+
+.description .row.heading {
+  width: 580px;
+  background-color: #d0d0d0;
+  border: 1px solid #303030;
+  padding: 8px 4px;
+  margin: 0;
+}
+
+.description .row:after {
+  content: " ";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 0;
+  height: 0;
+}
+
+.description .row .spacer {
+  min-height: 24px;
+}
+
+.description .row .key-container {
+  display: inline-block;
+  width: 140px;
+  float: left;
+  text-align: center;
+}
+
+.description .row .key-container:after {
+  content: " ";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 0;
+  height: 0;
+}
+
+.description .row .key-container .key {
+  font-family: Monaco;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  font-weight: bold;
+  color: #000000;
+  background-color: #d0d0d0;
+  min-width: 24px;
+  min-height: 24px;
+  border: 2px solid #202020;
+  border-radius: 6px;
+  padding: 2px 4px;
+  margin: 0 2px;
+}
+
+.description .row .key-container .key:after {
+  content: " ";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 0;
+  height: 0;
+}
+
+.description .row .delimiter {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 8px;
+  float: left;
+}
+
+.description .row .delimiter:after {
+  content: " ";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 0;
+  height: 0;
+}
+
+.description .row .usage {
+  font-size: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 8px;
+  float: left;
+}
+
+.description .row .usage:after {
+  content: " ";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 0;
+  height: 0;
 }
